# ParselTongue

./: .gitignore  AUTHORS  Makefile.am  NEWS  TODO  codemeta.json  configure.ac
anaconda/cfitsio/: build.sh  meta.yaml
anaconda/obit/: build.sh  meta.yaml  run_test.sh
anaconda/parseltongue/: build.sh  configure.patch  meta.yaml  run_test.sh
brew/: obit.rb  parseltongue.rb  python3-obit.rb  python3-parseltongue.rb
doc/: Makefile.am  cookbook.xml  tutorial.xml
python/: AIPS.py  AIPSData.py  AIPSLite.py  AIPSTV.py  AIPSTask.py  AIPSUtil.py  FITS.py  FileServer.py  LocalProxy.py  Makefile.am  MinimalMatch.py  ObitTask.py  ParallelTask.py  ParselTongue.py  Task.py  Utilities.py  XMLRPCServer.py  ptcompleter.py  ptversion.py.in
python/Proxy/: AIPS.py  AIPSData.py  AIPSTask.py  Makefile.am  ObitTask.py  Popsdat.py  Task.py
python/Wizardry/: AIPSData.py
rpm/: obit-cflags.patch  obit-disks.patch  obit-lm.patch  obit-python2.patch  obit.spec
test/: Makefile.am  ParselTest.in  VLBA1.UVCON  cat.py  convenience.py  fitld.py  fitld2.py  flag.py  history.py  history2.py  imean.py  indxr.py  jmfit.py  keywords.py  keywords2.py  keywords3.py  kntr.py  mandl.py  msglog.py  parseltest.py  pixels.py  rename.py  template.py  userno.py  uvcon.py  visibilities.py  visibilities2a.py  visibilities2b.py  visibilities3.py  visibilities4.py  visibilities5.py  zap.py  zap2.py  zap3.py  zap4.py
