## Process this file with automake to create Makefile.in.

SUBDIRS = Proxy Wizardry

pythonlibdir = $(pkgdatadir)/python
dist_pythonlib_PYTHON = \
	MinimalMatch.py Task.py \
	AIPS.py AIPSUtil.py AIPSTask.py AIPSData.py AIPSTV.py \
	FITS.py FITSData.py \
	ObitTask.py \
	LocalProxy.py XMLRPCServer.py \
	ParselTongue.py ptcompleter.py
